2010-05-02  Jan Djärv  <jan.h.d@swipnet.se>

	* xsmfns.c (CHDIR_OPT): New define.
	(smc_save_yourself_CB): Add CHDIR_OPT to options to use when
	restarting emacs.

	* xterm.c (x_connection_closed): Call Fkill_emacs instead of
	shut_down_emacs.

	* emacs.c (USAGE1): Mention --chdir.
	(main): Handle --chdir.
	(standard_args): Add --chdir.
	(fatal_error_signal): Call Fkill_emacs for SIGTERM and SIGHUP (Bug
	#5552).

2010-05-01  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove LD_SWITCH_MACHINE.
	* Makefile.in (LD_SWITCH_MACHINE): Remove definition, unused.
	(TEMACS_LDFLAGS): Do not use LD_SWITCH_MACHINE.

	Clean up IRIX code.
	* m/iris4d.h (TERMINFO, FIRST_PTY_LETTER): Move definitions ...
	* s/irix6-5.h (TERMINFO, FIRST_PTY_LETTER): ... here.

	Clean up AIX code.
	* m/ibmrs6000.inp: Remove file, unused.
	* m/ibmrs6000.h (IBMR2AIX): Remove, unused.
	(LD_SWITCH_MACHINE): Rename to LD_SWITCH_SYSTEM_TEMACS, and move
	definition ...
	* s/aix4-2.h (LD_SWITCH_SYSTEM_TEMACS): ... here.

	* sysdep.c (child_setup_tty, init_sys_modes): Remove !IBMR2AIX code, unused.

2010-05-01  Eli Zaretskii  <eliz@gnu.org>

	Emulate POSIX_SIGNALS on MS-Windows.

	* s/ms-w32.h (POSIX_SIGNALS, struct sigaction, SIG_BLOCK)
	(SIG_SETMASK, SIG_UNBLOCK): Define.

	* sysdep.c (sys_signal) [WINDOWSNT]: #ifdef away.
	(wait_for_termination) [WINDOWSNT]: Move MS-Windows specific code
	from non-POSIX_SIGNALS section to POSIX_SIGNALS section.

	* w32.c (sigemptyset, sigaddset, sigfillset, sigprocmask): New
	stubs.

	Miscellaneous fixes of bidi display.

	* xdisp.c (find_row_end): New function, refactored from display_line.
	(display_line): Use it.
	(extend_face_to_end_of_line): In almost-filled rows, extend only
	if the row is R2L and not continued.
	(display_line): Fix prepending of truncation glyphs to R2L rows.
	Preserve overlay and string info in row->end.
	(insert_left_trunc_glyphs): Support addition of left truncation
	glyphs to R2L rows.
	(set_cursor_from_row): Don't place cursor on the vertical border