@@ -1,3 +1,9 @@
+2010-05-02  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* m/amdx86-64.h (START_FILES, LIB_STANDARD): Remove.
+	The FreeBSD is not needed, the default works, Solaris version is
+	not needed, and the remaining case is not supported by configure.
+
 2010-05-02  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* xsmfns.c (CHDIR_OPT): New define.
